@@ -12,6 +12,8 @@ import java.time.LocalDateTime;
 
 import java.util.HashMap;
 import java.util.Map;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import http.project.networks.ii.cookies.Cookie;
 import http.project.networks.ii.requests.Request;
@@ -116,19 +118,52 @@ public class HTTPUtils {
 
     }
 
-    public static HttpRequestBody createRequestBodyFromFile(String filePath) throws IOException {
-        Path path = Paths.get(filePath);
-        if(!path.toFile().exists() || path.toFile().isDirectory()) {
+    public static HttpRequestBody createRequestBodyFromFile(String localPath, String filePath) throws IOException {
+        String filePathString = localPath + filePath;
+        Path path = Paths.get(filePathString);
+        if(!path.toFile().exists()) {
             return null;
         }
-        HttpBodyType type = determineBodyType(path);
-        if (isBinaryType(type)) {
-            byte[] data = Files.readAllBytes(path);
-            return new HttpRequestBody(type, data);
+        if(path.toFile().isDirectory()) {
+            String html = buildDirectoryHtml(localPath, filePath);
+            return new HttpRequestBody(HttpBodyType.HTML, html);
         } else {
-            String content = Files.readString(path);
-            return new HttpRequestBody(type, content);
+            HttpBodyType type = determineBodyType(path);
+            if (isBinaryType(type)) {
+                byte[] data = Files.readAllBytes(path);
+                return new HttpRequestBody(type, data);
+            } else {
+                String content = Files.readString(path);
+                return new HttpRequestBody(type, content);
+            }
         }
+    }
+
+    private static String buildDirectoryHtml(String localPath, String filePath) throws IOException {
+        Path directoryPath = Paths.get(localPath, filePath).normalize();
+        StringBuilder htmlBuilder = new StringBuilder();
+        htmlBuilder.append("<html><head><title>Index of ");
+        htmlBuilder.append(filePath);
+        htmlBuilder.append("</title></head><body><h1>Index of ");
+        htmlBuilder.append(filePath);
+        htmlBuilder.append("</h1><ul>");
+
+        // List files and directories
+        try (Stream<Path> stream = Files.list(directoryPath)) {
+            for (Path entry : stream.collect(Collectors.toList())) {
+                String fileName = entry.getFileName().toString();
+                Path relativeFilePath = Paths.get(filePath, fileName);
+
+                htmlBuilder.append("<li><a href=\"");
+                htmlBuilder.append(relativeFilePath.toString());
+                htmlBuilder.append("\">");
+                htmlBuilder.append(fileName);
+                htmlBuilder.append("</a></li>");
+            }
+        }
+
+        htmlBuilder.append("</ul></body></html>");
+        return htmlBuilder.toString();
     }
 
     public static Boolean isExpiredCookie(Cookie cookie){
